--- a/SchoolMgtAPI/SchoolMgtAPI/SchoolMgtAPI.csproj
+++ b/SchoolMgtAPI/SchoolMgtAPI/SchoolMgtAPI.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>a06976a2-42fd-49dc-b30d-4ffd50991887</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
