--- a/.github/workflows/school.yml
+++ b/.github/workflows/school.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: School Management Rest Api
       env:
-        HEROKU_API_KEY: 439d7559-e1c5-40a0-98ad-0b3ce90f3daa
+        HEROKU_API_KEY: ${{secrets.SECRET_API_kEY}}
         APP_NAME: school-mgt-api
       run: |
         docker build -t school-mgt-api .
