--- a/.github/workflows/myschool.yml
+++ b/.github/workflows/myschool.yml
@@ -12,6 +12,6 @@ jobs:
         HEROKU_API_KEY: ${{secrets.SECRET_API_KEY}}
         APP_NAME: ${{ secrets.SECRET_APP_NAME }}
       run: |
-        docker login --username=_ --password=$SECRET_API_KEY registry.heroku.com
+        docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
         heroku container:push web -a $APP_NAME
         heroku container:release web -a $APP_NAME
