--- a/.github/workflows/myschool.yml
+++ b/.github/workflows/myschool.yml
@@ -12,6 +12,6 @@ jobs:
         HEROKU_API_KEY: 439d7559-e1c5-40a0-98ad-0b3ce90f3daa
         APP_NAME: school-mgt-api
       run: |
-        docker login --username=_ --password=$SECRET_API_KEY registry.heroku.com
+        docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
         heroku container:push web -a $APP_NAME
         heroku container:release web -a $APP_NAME
