--- a/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
+++ b/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "default": "User ID =postgres;Password=Thank.you12345;Server=localhost;Port=5432;Database=schoolmngt;Integrated Security=true;Pooling=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
