payment integration, mail service, password CRUD

--- a/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
+++ b/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "default": "User ID =postgres;Password=Thank.you12345;Server=localhost;Port=5432;Database=schoolmngt;Integrated Security=true;Pooling=true"
   },
+
+  "Paystack": {
+    "PaystackSK": "sk_test_75dc999e103246645c273cd2d745fca990e571c6"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +14,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "AppUrl": {
+    "applicationURL": "http://localhost:13090"
+  }
 }
+  
