payment integrated,users registration implemented, PasswordService implemented, address repo and services implemented, non academic staff positions repo and service implemented

--- a/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
+++ b/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
@@ -17,7 +17,20 @@
   "AllowedHosts": "*",
 
   "AppUrl": {
-    "applicationURL": "http://localhost:13090"
+    "appURL": "http://localhost:13090"
+  },
+
+  "JWTSettings": {
+    "Issuer": "http://localhost:13090",
+    "Audience": "http://localhost:13090",
+    "SecretKey": "iuyhj-356tre-8uyt5644311-rtyu7"
+  },
+
+  "MailSettings": {
+    "Mail": "ifecombataimo@gmail.com",
+    "DisplayName": "School Management",
+    "Password": "Slim.joe",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
-  
