--- a/SchoolMgtAPI/SchoolMgtAPI/SchoolMgtAPI.csproj
+++ b/SchoolMgtAPI/SchoolMgtAPI/SchoolMgtAPI.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Seeder\Seeder.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
