end-points test, bug fix

--- a/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
+++ b/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
@@ -16,10 +16,8 @@
   },
   "AllowedHosts": "*",
 
-  "AppUrl": {
-    "appURL": "http://localhost:13090"
-  },
-
+  "AppUrl":"https://localhost:5001",
+ 
   "JWTSettings": {
     "Issuer": "http://localhost:13090",
     "Audience": "http://localhost:13090",
