environment variable configured

--- a/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
+++ b/SchoolMgtAPI/SchoolMgtAPI/appsettings.json
@@ -16,12 +16,19 @@
   },
   "AllowedHosts": "*",
 
-  "AppUrl":"https://localhost:5001",
- 
+  "AppUrl": "https://localhost:5001",
+  "HerokuUrl": "https://school-mgt-api.herokuapp.com",
+
   "JWTSettings": {
     "Issuer": "http://localhost:13090",
     "Audience": "http://localhost:13090",
     "SecretKey": "iuyhj-356tre-8uyt5644311-rtyu7"
+  },
+
+  "HerokuJWTSettings": {
+    "HerokuIssuer": "https://school-mgt-api.herokuapp.com",
+    "HerokuAudience": "https://school-mgt-api.herokuapp.com",
+    "HerokuSecretKey": "iuyhj-356tre-8uyt5644311-rtyu7"
   },
 
   "MailSettings": {
