--- a/SchoolMgtAPI/Utilities/Utilities.csproj
+++ b/SchoolMgtAPI/Utilities/Utilities.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.0" />
   </ItemGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
