--- a/SchoolMgtAPI/SchoolMgtAPI/SchoolMgtAPI.csproj
+++ b/SchoolMgtAPI/SchoolMgtAPI/SchoolMgtAPI.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Seeder\Seeder.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
   </ItemGroup>
 
 </Project>
